--- a/app/templates/admin_create.html
+++ b/app/templates/admin_create.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            text-align: center;
+            margin: 50px auto;
+        }
+        .row{
+            display: flex;
+            justify-content: center;
+        }
+        .box{
+            width: 300px;
+            height: 300px;
+            box-shadow: 2px 2px 10px black;
+            padding: 20px;
+            border-radius: 20px;
+            input{
+                width: 98%;
+                height: 34px;
+                margin-top: 20px;
+            }
+            button{
+                margin-top: 40px;
+                padding: 10px;
+                border:none;
+                border-radius: 10px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <center><h1>Add Admin</h1></center>
+    <h1>Add Admin</h1>
+    <div class="row">
+        <div class="box">
+            <form action="" method="post">
+                {% csrf_token %}
+                <input type="text" name="name" placeholder="Name" id="name">
+                <input type="tel" name="phone" placeholder="Phone" id="phone">
+                <input type="email" name="email" placeholder="Email" id="email">
+                <div class="row"><button type="submit">Proceed</button></div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
