--- a/app/templates/admin_verification.html
+++ b/app/templates/admin_verification.html
@@ -7,7 +7,7 @@
     <style>
         h1{
             text-align: center;
-            margin: 120px auto 50px;
+            margin: 80px auto 50px;
         }
         .row{
             display: flex;
@@ -15,17 +15,17 @@
         }
         .box{
             width: 300px;
-            height: 150px;
+            height: 240px;
             box-shadow: 2px 2px 10px black;
             padding: 20px;
             border-radius: 20px;
             input{
                 width: 98%;
                 height: 34px;
-                margin-top: 20px;
+                /* margin-top: 20px; */
             }
             button{
-                margin-top: 40px;
+                margin-top: 20px;
                 padding: 10px;
                 border:none;
                 border-radius: 10px;
@@ -39,7 +39,11 @@
         <div class="box">
             <form action="" method="post">
                 {% csrf_token %}
-                <input type="email" name="email" placeholder="Enter Your Email" id="email">
+                <div class="row"><h2>OTP</h2></div>
+                <input type="number" name="otp" placeholder="Enter OTP here" id="otp">
+                <div style="text-align: center;">
+                    <p>OTP was to your registered email address. Please check and the otp within 2 minutes.</p>
+                </div>
                 <div class="row"><button type="submit">Proceed</button></div>
             </form>
         </div>
