added landing page

--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sai Music, Bhadrak</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body>
     <center><h1>Dashboard</h1></center>
