added colors and designs

--- a/app/templates/admin_login.html
+++ b/app/templates/admin_login.html
@@ -11,13 +11,14 @@
     </style>
 </head>
 <body>
-    <h1>Admin Login</h1>
+    
     <div class="row">
         <div class="box">
+            <h1>Admin Login</h1>
             <form action="" method="post">
                 {% csrf_token %}
                 <input type="email" name="email" placeholder="Enter Your Email" id="email">
-                <div class="row"><button type="submit">Proceed</button></div>
+                <div class="row2"><button type="submit">Proceed</button></div>
             </form>
         </div>
     </div>
