--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -6,16 +6,19 @@ body{
 }
 h1{
     text-align: center;
-    margin: 120px auto 50px;
 }
 .row{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+}
+.row2{
     display: flex;
     justify-content: center;
 }
 .box{
     width: 300px;
-    height: 150px;
-    /* background-color: purple; */
     padding: 20px;
     border-radius: 20px;
     input{
@@ -27,14 +30,15 @@ h1{
         background-color: black;
         border: none;
         border-bottom: 2px solid purple;
-
+        outline: none;
     }
     button{
         margin-top: 40px;
         padding: 10px;
+        font-size: 18px;
         border:none;
-        border-radius: 10px;
-        background-color: royalblue;
+        border-radius: 10px 0px 10px 0px;
+        background-color: rgb(195, 0, 0);
         color: white;
         font-weight: bold;
     }
