--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <a href="">Status</a>
+        <a href="{% url 'check_status' %}">Status</a>
         <a href="{% url 'admin_login' %}">Login</a>
     </header>
     <section class="header">
@@ -24,7 +24,7 @@
             <h1>SAI MUSIC</h1>
             <h2>Truss Light & DJ Sound</h2>
             <h3>Music is the soundtrack of your life. Let us make your<br>event unforgettable.</h3>
-            <a href="" class="cntr"><div class="book">Book Now</div></a>
+            <a href="{% url 'booking' %}" class="cntr"><div class="book">Book Now</div></a>
         </div>
     </section>
     <section class="card1">
@@ -72,7 +72,7 @@
                 <div class="cntr">
                     <img class="prfle" src="https://thumbs.dreamstime.com/b/dj-avatar-icon-simple-style-illustration-vector-web-design-isolated-white-background-164370922.jpg" alt="">
                 </div>
-                <h3>Abhinandan XXX</h3>
+                <h3>Abhinandan Nayak</h3>
                 <h5>+91 7077665833</h5>
                 <h5>abhinandanbablu18@gmail.com</h5>
                 <div class="cntr">
@@ -93,7 +93,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11963.324350819881!2d86.57772732443597!3d21.03185983534933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1bf541ba0ee375%3A0xd615f8a2993d5e0d!2sS%20MUSIC%20BHADRAK!5e0!3m2!1sen!2sin!4v1723027000803!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                </div>
             </div>
         </div>
-        <a href="" class="cntr"><div class="book">Book Now</div></a>
+        <a href="{% url 'booking' %}" class="cntr"><div class="book">Book Now</div></a>
     </section>
     <section class="footer">
         <img src="{% static 'images/wave2.jpg' %}" alt="">
