--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -3,10 +3,23 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 header{
-    position: absolute;
+    position: fixed;
     top: 30px;
     right: 30px;
+    left: 30px;
+    display: flex;
+    justify-content: space-between;
+    h1{
+        color: rgb(255, 196, 0);
+        /* font-size: 70px; */
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        margin: -5px 0;
+    }
     a{
         color: white;
         margin-left: 20px;
@@ -41,20 +54,33 @@ a {
     align-items: center;
     text-shadow: 2px 2px 10px black;
     color: white;
+    display: flex;
+    justify-content: space-evenly;
 
     h1 {
         color: rgb(255, 196, 0);
-        font-size: 100px;
+        font-size: 70px;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         margin: 10px;
     }
 
     h2 {
-        font-size: 4rem;
+        font-size: 2.8rem;
         margin: 5px;
     }
 
     h3 {
-        font-size: 2rem;
+        font-size: 1.2rem;
+    }
+
+    .avalabilities{
+        text-align: right;
+        h3{
+            background-color: rgba(255, 255, 255, 0.263);
+            color: rgb(255, 255, 255);
+            border-radius: 10px;
+            padding: 20px;
+        }
     }
 }
 
@@ -69,6 +95,7 @@ a {
     transition: all 0.3s;
     text-align: center;
     text-shadow: none;
+    margin: 20px;
 }
 
 .book:hover {
@@ -146,6 +173,12 @@ a {
             width: 30px;
             border-radius: 50%;
             margin: 20px 10px;
+        }
+        a{
+            transition: all 0.3s;
+        }
+        a:hover{
+            scale: 1.1;
         }
     }
 
