--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Date Picker</title>
+    <title>Sai Music - Booking</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/booking.css' %}">
 </head>
@@ -17,11 +17,17 @@
         <a href="{% url 'booking_dj' %}" class="cat-dj">
             DJs
         </a>
-        <a href="" class="cat-dj">
+        <a href="" class="cat-oth">
             Lights
         </a>
-        <a href="" class="cat-dj">
-            Speakers
+        <a href="" class="cat-oth">
+            Sound Systems
+        </a>
+        <a href="" class="cat-oth">
+            Decorations
+        </a>
+        <a href="" class="cat-oth">
+            Catering
         </a>
     </div>
     <div class="desc">
