--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -8,6 +8,79 @@ html {
     scroll-behavior: smooth;
 }
 
+.loading{
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    z-index: 2;
+    display: flex;
+    /* display: none; */
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 196, 0);
+    text-align: center;
+    h1{
+        color: rgb(255, 196, 0);
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        margin: -5px 0;
+        font-size: 100px;
+        animation: bounce 2.5s infinite;
+    }
+    h5{
+        color: rgb(255, 196, 0);
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        margin: 8px 0;
+        text-align: center;
+        font-size: 43px;
+        animation: slideIn 2.5s ease-in-out forwards;
+        span{
+            color: red;
+            margin: auto 2px;
+            font-size: 38px;
+            animation: pulse 3.3s 1;
+        }
+        
+    }
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-30px);
+    }
+    60% {
+        transform: translateY(-15px);
+    }
+}
+
+@keyframes slideIn {
+    0%, 60% {
+        opacity: 0;
+        transform: scale(1.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes pulse {
+    from {
+        opacity: 0;
+        font-size: 2px;
+    }
+    90% {
+        opacity: 0;
+        font-size: 2px;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 header{
     position: fixed;
     top: 30px;
@@ -19,6 +92,17 @@ header{
         color: rgb(255, 196, 0);
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         margin: -5px 0;
+    }
+    h5{
+        color: rgb(255, 196, 0);
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        margin: 8px 0;
+        text-align: center;
+        span{
+            color: red;
+            margin: auto 2px;
+        }
+        
     }
     a{
         color: white;
@@ -43,25 +127,28 @@ a {
     display: flex;
     justify-content: center;
 }
+.cntr2{
+    display: flex;
+}
 
 .header {
     height: 100vh;
     background-size: cover;
     background-position: center;
-    text-align: center;
+    text-align: left;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-shadow: 2px 2px 10px black;
+    text-shadow: 4px 4px 10px black;
     color: white;
     display: flex;
     justify-content: space-evenly;
 
     h1 {
         color: rgb(255, 196, 0);
-        font-size: 70px;
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        margin: 10px;
+        font-size: 60px;
+        /* font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
+        margin: 0px 20px;
     }
 
     h2 {
@@ -71,6 +158,7 @@ a {
 
     h3 {
         font-size: 1.2rem;
+        margin: 30px auto;
     }
 
     .avalabilities{
@@ -80,6 +168,7 @@ a {
             color: rgb(255, 255, 255);
             border-radius: 10px;
             padding: 20px;
+            margin: 15px;
         }
     }
 }
@@ -95,7 +184,7 @@ a {
     transition: all 0.3s;
     text-align: center;
     text-shadow: none;
-    margin: 20px;
+    margin-right: 40px;
 }
 
 .book:hover {
@@ -232,23 +321,48 @@ a {
 }
 
 @media only screen and (max-width: 720px) {
+    .loading{
+        h1{
+            margin: -5px 0;
+            font-size: 60px;
+        }
+        h5{
+            margin: 12px 0;
+            font-size: 25px;
+            span{
+                font-size: 24px;
+            }
+            
+        }
+    }
     .header{
+        height: 90vh;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+        padding: 110px 0 0px;
         h1 {
-            color: rgb(255, 196, 0);
-            font-size: 50px;
-            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            margin: 100px 10px 10px;
+            font-size: 1.8rem;
+            margin: 5px 10px;
         }
     
         h2 {
-            font-size: 2rem;
+            font-size: 1.6rem;
+            margin: 5px;
         }
     
         h3 {
             font-size: 0.7rem;
+            text-align: center;
+            padding: 0px 30px;
+        }
+        
+        .cntr2{
+            display: flex;
+            justify-content: center;
+        }
+        .mob-l-2{
+            margin-left: 15px;
         }
     
         .avalabilities{
@@ -256,6 +370,7 @@ a {
             h3{
                 padding: 15px;
                 font-size: 0.9rem;
+                margin: 5px;
             }
         }
     }
@@ -277,6 +392,15 @@ a {
             padding: 5px 15px;
             border-radius: 20px;
             transition: all 0.2s;
+        }
+        h5{
+            margin: 9px 0;
+            font-size: 8px;
+            span{
+                color: red;
+                margin: auto 2px;
+            }
+            
         }
     }
     .card1{
