--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,8 +15,17 @@
 </head>
 
 <body>
+    <section class="loading">
+        <div>
+            <h1>SAI MUSIC</h1>
+            <h5>DJ Abhi <span>&#10060</span> Rout Bros</h5>
+        </div>
+    </section>
     <header>
-        <h1>SAI MUSIC</h1>
+        <div>
+            <h1>SAI MUSIC</h1>
+            <h5>DJ Abhi <span>&#10060</span> Rout Bros</h5>
+        </div>
         <div>
             <a href="{% url 'check_status' %}">Status</a>
             <a href="{% url 'admin_login' %}">Login</a>
@@ -24,19 +33,26 @@
     </header>
     <section class="header">
         <div>
-            <h1>SAI MUSIC</h1>
-            <h2>Truss Light & DJ Sound</h2>
-            <h3>Music is the soundtrack of your life. Let us make your<br>event unforgettable.</h3>
-            <div class="cntr">
-                <a href="{% url 'booking' %}" class="cntr"><div class="book">Book Now</div></a>
-                <a href="#contact" class="cntr"><div class="book" style="background-color: rgb(198, 35, 35); color: white;">Contact Us</div></a>
+            <div class="mob-l-2">
+                <div style="display: flex;"><h2>Make Your </h2><h1>CELEBRATION</h1></div>
+                <h2>Unforgottable</h2>
+            </div>
+            <h3>By Truss Light & DJ Sound: Music is the heartbeat of every celebration.<br>Trust us to make your event truly memorable.</h3>
+            <div class="cntr2">
+                <a href="{% url 'booking' %}" class="cntr">
+                    <div class="book">Book Now</div>
+                </a>
+                <a href="#contact" class="cntr">
+                    <div class="book" style="background-color: rgb(198, 35, 35); color: white;">Contact Us</div>
+                </a>
             </div>
         </div>
         <div>
             <div class="avalabilities">
                 <h3>Different varities of DJs</h3>
-                <h3>Sparling lasser & non-lesser lights</h3>
+                <h3>Sparkling lasser & non-lesser lights</h3>
                 <h3>Vibrating High Qality Speakers</h3>
+                <h3>Exclusive Tunes &  Music Collections</h3>
                 <h3>1000+ Happy Celebrations</h3>
                 <h3>4000+ Satisfied Customers</h3>
             </div>
@@ -47,25 +63,34 @@
         <h1>Religious Wedding</h1>
         <div class="cntr">
             <div class="side">
-                <h2>A religious wedding ceremony is a sacred and traditional event that celebrates the union of two individuals in accordance with the customs, rituals, and beliefs of their faith. It typically involves various symbolic gestures, prayers, blessings, and readings from religious texts that signify the commitment and spiritual significance of marriage</h2>
+                <h2>A religious wedding ceremony is a sacred and traditional event that celebrates the union of two
+                    individuals in accordance with the customs, rituals, and beliefs of their faith. It typically
+                    involves various symbolic gestures, prayers, blessings, and readings from religious texts that
+                    signify the commitment and spiritual significance of marriage</h2>
             </div>
             <div class="side2">
-                <img src="https://images.ctfassets.net/77l22z9el0aa/6V8yIOmS3LBVMBJHp6gWhg/deca065a855a5f9c4618a8d6e1a5e44c/AntonDrummondPhotography_HeroImage_1080x720.jpg" alt="">
-                <img src="https://www.brides.com/thmb/VnAlJAzPcatFEfwfOvqwfCd7i7Y=/1500x0/filters:no_upscale():max_bytes(200000):strip_icc()/RECIRC4-0de601149cf7459faf7dd4347f18aec7.jpg" alt="">
+                <img src="https://images.ctfassets.net/77l22z9el0aa/6V8yIOmS3LBVMBJHp6gWhg/deca065a855a5f9c4618a8d6e1a5e44c/AntonDrummondPhotography_HeroImage_1080x720.jpg"
+                    alt="">
+                <img src="https://www.brides.com/thmb/VnAlJAzPcatFEfwfOvqwfCd7i7Y=/1500x0/filters:no_upscale():max_bytes(200000):strip_icc()/RECIRC4-0de601149cf7459faf7dd4347f18aec7.jpg"
+                    alt="">
             </div>
         </div><br>
         <img src="{% static 'images/wave1.jpg' %}" alt="">
     </section>
     <section class="card1">
         <br>
-        <h1 style="margin-top: 20px;">Spiritual Celebration</h1>
+        <!-- <h1 style="margin-top: 20px;">Spiritual Celebration</h1> -->
+        <h1 style="margin-top: 20px;">Puja Bhasani</h1>
         <div class="cntr">
             <div class="side2">
                 <img src="{% static 'images/ganesh.jpg' %}" alt="">
                 <img src="{% static 'images/puja.jpg' %}" alt="">
             </div>
             <div class="side">
-                <h2>At a devotional festival, a DJ and music elevate the experience to new heights, blending traditional melodies with contemporary beats. The rhythmic sounds create an atmosphere of joy and celebration, encouraging everyone to dance and connect. This fusion of music transforms the event, making it an unforgettable celebration of spirituality and community.</h2>
+                <h2>At a devotional festival, a DJ and music elevate the experience to new heights, blending traditional
+                    melodies with contemporary beats. The rhythmic sounds create an atmosphere of joy and celebration,
+                    encouraging everyone to dance and connect. This fusion of music transforms the event, making it an
+                    unforgettable celebration of spirituality and community.</h2>
             </div>
         </div><br>
     </section>
@@ -74,10 +99,14 @@
         <h1 style="color: rgb(82, 82, 255);">Galary</h1>
 
         <div class="galary">
-            <img src="https://static.vecteezy.com/system/resources/thumbnails/020/399/200/small_2x/disc-jockey-esport-mascot-logo-design-vector.jpg" alt="">
-            <img src="https://static.vecteezy.com/system/resources/thumbnails/020/399/200/small_2x/disc-jockey-esport-mascot-logo-design-vector.jpg" alt="">
-            <img src="https://static.vecteezy.com/system/resources/thumbnails/020/399/200/small_2x/disc-jockey-esport-mascot-logo-design-vector.jpg" alt="">
-            <img src="https://static.vecteezy.com/system/resources/thumbnails/020/399/200/small_2x/disc-jockey-esport-mascot-logo-design-vector.jpg" alt="">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/020/399/200/small_2x/disc-jockey-esport-mascot-logo-design-vector.jpg"
+                alt="">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/020/399/200/small_2x/disc-jockey-esport-mascot-logo-design-vector.jpg"
+                alt="">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/020/399/200/small_2x/disc-jockey-esport-mascot-logo-design-vector.jpg"
+                alt="">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/020/399/200/small_2x/disc-jockey-esport-mascot-logo-design-vector.jpg"
+                alt="">
         </div>
     </section>
     <section class="card1">
@@ -85,7 +114,9 @@
             <div class="left">
                 <h1>Our Coordinators</h1>
                 <div class="cntr">
-                    <img class="prfle" src="https://thumbs.dreamstime.com/b/dj-avatar-icon-simple-style-illustration-vector-web-design-isolated-white-background-164370922.jpg" alt="">
+                    <img class="prfle"
+                        src="https://thumbs.dreamstime.com/b/dj-avatar-icon-simple-style-illustration-vector-web-design-isolated-white-background-164370922.jpg"
+                        alt="">
                 </div>
                 <h3>Abhinandan Nayak</h3>
                 <h5>+91 7077665833</h5>
@@ -102,17 +133,32 @@
                     <a href=""><img src="{% static 'images/mail.png' %}" alt=""></a>
                     <a href=""><img src="{% static 'images/youtube (1).png' %}" alt=""></a>
                     <a href=""><img src="{% static 'images/facebook (3).png' %}" alt=""></a>
-                    <a href="https://www.instagram.com/smusicbhadrak_7/?fbclid=IwY2xjawEi6GhleHRuA2FlbQIxMAABHYenRdvnZ6Hye8ircyHidfeitcstvEvwXzxRNCZTaMBtks49SGJkqM0QcA_aem_Nwd3g1whwWIpptFRqwTaug"><img src="{% static 'images/instagram (1).png' %}" alt=""></a>
+                    <a
+                        href="https://www.instagram.com/smusicbhadrak_7/?fbclid=IwY2xjawEi6GhleHRuA2FlbQIxMAABHYenRdvnZ6Hye8ircyHidfeitcstvEvwXzxRNCZTaMBtks49SGJkqM0QcA_aem_Nwd3g1whwWIpptFRqwTaug"><img
+                            src="{% static 'images/instagram (1).png' %}" alt=""></a>
                 </div>
                 <div class="responsive-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11963.324350819881!2d86.57772732443597!3d21.03185983534933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1bf541ba0ee375%3A0xd615f8a2993d5e0d!2sS%20MUSIC%20BHADRAK!5e0!3m2!1sen!2sin!4v1723027000803!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                </div>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11963.324350819881!2d86.57772732443597!3d21.03185983534933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1bf541ba0ee375%3A0xd615f8a2993d5e0d!2sS%20MUSIC%20BHADRAK!5e0!3m2!1sen!2sin!4v1723027000803!5m2!1sen!2sin"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
     </section>
-    <a href="{% url 'booking' %}" class="cntr"><div class="book">Book Now</div></a>
+    <a href="{% url 'booking' %}" class="cntr">
+        <div class="book">Book Now</div>
+    </a>
     <section class="footer">
         <img src="{% static 'images/wave2.jpg' %}" alt="">
     </section>
+    <script>
+        window.onload = function () {
+            setTimeout(function () {
+                document.getElementsByClassName('loading')[0].style.display = 'none';
+            }, 5000);
+        };
+    </script>
 </body>
 
 </html>
