--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -17,7 +17,7 @@
         <a href="{% url 'booking_dj' %}" class="cat-dj">
             DJs
         </a>
-        <a href="" class="cat-oth">
+        <a href="{% url 'booking_date' %}" class="cat-oth">
             Lights
         </a>
         <a href="" class="cat-oth">
