--- a/app/static/css/bookingOthers.css
+++ b/app/static/css/bookingOthers.css
@@ -237,6 +237,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     color: purple;
+    padding: 0% 5%;
     .dj{
         width: 18%;
         aspect-ratio: 0.7;
@@ -253,6 +254,7 @@ body {
         h4{
             margin: 5px auto;
             font-size: 100%;
+            color: red;
         }
         p{
             margin: 10px;
@@ -296,6 +298,7 @@ body {
         flex-wrap: wrap;
         justify-content: space-around;
         color: purple;
+        padding: 0% 0%;
         .dj{
             width: 45%;
             aspect-ratio: 0.7;
