--- a/app/templates/booking_others.html
+++ b/app/templates/booking_others.html
@@ -55,6 +55,30 @@
                 </p>
                 <div class="cntr"><button>Book Now</button></div>
             </div>
+            <div class="dj">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkV4pd94hXWmJ52nzK8E8mFQdVHT6KMmO3VmL6W7AkbePrZ8dSvABYUpVYeUyJKiDrj2A&usqp=CAU" alt="">
+                <h4>32,000</h4>
+                <p>
+                    Speaker With Display
+                </p>
+                <div class="cntr"><button>Book Now</button></div>
+            </div>
+            <div class="dj">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyridawYGPIKGwupzyG_kZb6_7XgulzcVukw&s" alt="">
+                <h4>40,000</h4>
+                <p>
+                    Square Speaker with 4 mini speakers
+                </p>
+                <div class="cntr"><button>Book Now</button></div>
+            </div>
+            <div class="dj">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkV4pd94hXWmJ52nzK8E8mFQdVHT6KMmO3VmL6W7AkbePrZ8dSvABYUpVYeUyJKiDrj2A&usqp=CAU" alt="">
+                <h4>32,000</h4>
+                <p>
+                    Speaker With Display
+                </p>
+                <div class="cntr"><button>Book Now</button></div>
+            </div>
         </div>
     </section>
     
