--- a/app/templates/booking_others.html
+++ b/app/templates/booking_others.html
@@ -11,16 +11,19 @@
 
 <body>
     <section class="card1">
-        <div class="options">
-            <button class="active" >Lights</button>
-            <button>Sound Systems</button>
-            <button>Decorations</button>
-            <button>Catering Items</button>
+        <div class="logo">
+
         </div>
         <div class="date">
             <a href="{% url 'booking_date' %}">Select Date</a>
         </div>
     </section>
+    <div class="options">
+        <button class="active" >Lights</button>
+        <button>Sound Systems</button>
+        <button>Decorations</button>
+        <button>Catering Items</button>
+    </div>
     <section class="card2">
         <div class="djs">
             <div class="dj">
