--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -34,10 +34,14 @@
     <section class="header">
         <div>
             <div class="mob-l-2">
-                <div style="display: flex;"><h2>Make Your </h2><h1>CELEBRATION</h1></div>
+                <div style="display: flex;">
+                    <h2>Make Your </h2>
+                    <h1>CELEBRATION</h1>
+                </div>
                 <h2>Unforgottable</h2>
             </div>
-            <h3>By Truss Light & DJ Sound: Music is the heartbeat of every celebration.<br>Trust us to make your event truly memorable.</h3>
+            <h3>By Truss Light & DJ Sound: Music is the heartbeat of every celebration.<br>Trust us to make your event
+                truly memorable.</h3>
             <div class="cntr2">
                 <a href="{% url 'booking' %}" class="cntr">
                     <div class="book">Book Now</div>
@@ -52,7 +56,7 @@
                 <h3>Different varities of DJs</h3>
                 <h3>Sparkling lasser & non-lesser lights</h3>
                 <h3>Vibrating High Qality Speakers</h3>
-                <h3>Exclusive Tunes &  Music Collections</h3>
+                <h3>Exclusive Tunes & Music Collections</h3>
                 <h3>1000+ Happy Celebrations</h3>
                 <h3>4000+ Satisfied Customers</h3>
             </div>
@@ -112,19 +116,41 @@
     <section class="card1">
         <div class="connect" id="contact">
             <div class="left">
-                <h1>Our Coordinators</h1>
                 <div class="cntr">
-                    <img class="prfle"
-                        src="https://thumbs.dreamstime.com/b/dj-avatar-icon-simple-style-illustration-vector-web-design-isolated-white-background-164370922.jpg"
-                        alt="">
-                </div>
-                <h3>Abhinandan Nayak</h3>
-                <h5>+91 7077665833</h5>
-                <h5>abhinandanbablu18@gmail.com</h5>
-                <div class="cntr">
-                    <a href="tel:+917077665833"><img src="{% static 'images/dialer.png' %}" alt=""></a>
-                    <a href="mailto:abhinandanbablu18@gmail.com"><img src="{% static 'images/mail.png' %}" alt=""></a>
-                    <a href=""><img src="{% static 'images/instagram (1).png' %}" alt=""></a>
+                    <div>
+                        <h1>Administrator</h1>
+                        <div class="cntr">
+                            <img class="prfle"
+                                src="https://thumbs.dreamstime.com/b/dj-avatar-icon-simple-style-illustration-vector-web-design-isolated-white-background-164370922.jpg"
+                                alt="">
+                        </div>
+                        <h3>Abhinandan Nayak</h3>
+                        <h5>+91 7077665833</h5>
+                        <h5>abhinandanbablu18@gmail.com</h5>
+                        <div class="cntr">
+                            <a href="tel:+917077665833"><img src="{% static 'images/dialer.png' %}" alt=""></a>
+                            <a href="mailto:abhinandanbablu18@gmail.com"><img src="{% static 'images/mail.png' %}"
+                                    alt=""></a>
+                            <a href=""><img src="{% static 'images/instagram (1).png' %}" alt=""></a>
+                        </div>
+                    </div>
+                    <div>
+                        <h1>Coordinators</h1>
+                        <div class="cntr">
+                            <img class="prfle"
+                                src="https://thumbs.dreamstime.com/b/dj-avatar-icon-simple-style-illustration-vector-web-design-isolated-white-background-164370922.jpg"
+                                alt="">
+                        </div>
+                        <h3>DJ Pappu</h3>
+                        <h5>+91 8917676498</h5>
+                        <h5>abhinandanbablu42526@gmail.com</h5>
+                        <div class="cntr">
+                            <a href="tel:+917077665833"><img src="{% static 'images/dialer.png' %}" alt=""></a>
+                            <a href="mailto:abhinandanbablu18@gmail.com"><img src="{% static 'images/mail.png' %}"
+                                    alt=""></a>
+                            <a href=""><img src="{% static 'images/instagram (1).png' %}" alt=""></a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="right">
