--- a/app/static/css/bookingOthers.css
+++ b/app/static/css/bookingOthers.css
@@ -3,29 +3,34 @@ body {
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
 }
-.date-container{
+
+.date-container {
     display: flex;
     height: 80vh;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     align-items: center;
-    p{
+
+    p {
         width: 400px;
         line-height: 24px;
         color: rgba(255, 196, 0, 0.708);
     }
 }
-.caption2{
+
+.caption2 {
     display: none;
 }
-.cntr{
+
+.cntr {
     display: flex;
     justify-content: center;
 }
-.btn{
+
+.btn {
     margin-top: 40px;
     padding: 10px;
     font-size: 18px;
-    border:none;
+    border: none;
     border-radius: 10px 0px 10px 0px;
     background-color: rgb(195, 0, 0);
     color: white;
@@ -33,10 +38,12 @@ body {
     transition: all 0.3s;
     text-decoration: none;
 }
-.btn:hover{
+
+.btn:hover {
     transform: scale(0.9);
 }
-.choose-date{
+
+.choose-date {
     width: 400px;
     border-radius: 20px;
     box-shadow: 1px 1px 50px rgb(61, 61, 61);
@@ -193,17 +200,19 @@ body {
     .calendar--days span.start.end::after {
         display: none;
     }
-      
+
 }
 
 
-.card1{
+.card1 {
     display: flex;
     justify-content: space-between;
 }
-.options{
+
+.options {
     padding: 15px 0;
-    button{
+
+    button {
         border: none;
         border-radius: 20px;
         padding: 7px 15px;
@@ -214,18 +223,22 @@ body {
         color: white;
         transition: all 0.2s;
     }
-    button:hover{
+
+    button:hover {
         background-color: #fff;
         color: black;
     }
-    .active{
+
+    .active {
         background-color: #fff;
         color: black;
     }
 }
-.date{
+
+.date {
     margin-top: 25px;
-    a{
+
+    a {
         border-radius: 5px;
         padding: 7px 15px;
         font-size: 17px;
@@ -236,13 +249,15 @@ body {
         color: white;
     }
 }
-.djs{
+
+.djs {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     color: purple;
     padding: 0% 5%;
-    .dj{
+
+    .dj {
         width: 18%;
         aspect-ratio: 0.7;
         background-color: white;
@@ -251,19 +266,23 @@ body {
         border-radius: 20px;
         text-align: center;
         padding-bottom: 10px;
-        img{
+
+        img {
             width: 100%;
             border-radius: 20px 20px 0 0;
         }
-        h4{
+
+        h4 {
             margin: 5px auto;
             font-size: 100%;
             color: red;
         }
-        p{
+
+        p {
             margin: 10px;
         }
-        button{
+
+        button {
             border: none;
             background-color: green;
             border-radius: 10px;
@@ -274,75 +293,118 @@ body {
     }
 }
 
+.plus-minus {
+    span {
+        cursor: pointer;
+    }
 
-
-
-
-@media only screen and (max-width: 720px){
-    .date-container{
-        .caption{
-            display: none;
-        }
-        flex-direction: column;
+    .minus,
+    .plus {
+        width: 20px;
+        height: 20px;
+        background: #f2f2f2;
+        border-radius: 4px;
+        padding: 8px 5px 8px 5px;
+        border: 1px solid #ddd;
+        display: inline-block;
+        vertical-align: middle;
         text-align: center;
-        height: max-content;
-        padding-bottom: 40px;
+        user-select: none;
     }
-    .caption2{
-        display: block;
-        margin: 20px;
+
+    input {
+        height: 34px;
+        width: 60px;
         text-align: center;
-        p{
-            width: 350px;
-            font-size: 12px;
-            line-height: 20px;
-            text-align: left;
-            margin-bottom: 20px;
-            color: rgba(255, 196, 0, 0.708);
-        }
-        h4{
-            margin: 10px;
-        }
-    }
-    .choose-date{
-        width: 300px;
-    }
-    .btn{
-        margin: 0 0 10px 0;
-    }
-    
-    .djs{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        color: purple;
-        padding: 0% 0%;
-        .dj{
-            width: 45%;
-            aspect-ratio: 0.7;
-            background-color: white;
-            margin: 10px auto;
-            border-radius: 20px;
-            text-align: center;
-            img{
-                width: 100%;
-                border-radius: 20px 20px 0 0;
-            }
-            h4{
-                margin: 5px auto;
-                font-size: 100%;
-            }
-            p{
-                margin: 10px;
-            }
-            button{
-                border: none;
-                background-color: green;
-                border-radius: 10px;
-                font-size: 20px;
-                color: white;
-                padding: 7px 13px;
-            }
-        }
+        font-size: 26px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        display: inline-block;
+        vertical-align: middle;
+
     }
 }
+
+
+
+
+
+    @media only screen and (max-width: 720px) {
+        .date-container {
+            .caption {
+                display: none;
+            }
+
+            flex-direction: column;
+            text-align: center;
+            height: max-content;
+            padding-bottom: 40px;
+        }
+
+        .caption2 {
+            display: block;
+            margin: 20px;
+            text-align: center;
+
+            p {
+                width: 350px;
+                font-size: 12px;
+                line-height: 20px;
+                text-align: left;
+                margin-bottom: 20px;
+                color: rgba(255, 196, 0, 0.708);
+            }
+
+            h4 {
+                margin: 10px;
+            }
+        }
+
+        .choose-date {
+            width: 300px;
+        }
+
+        .btn {
+            margin: 0 0 10px 0;
+        }
+
+        .djs {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            color: purple;
+            padding: 0% 0%;
+
+            .dj {
+                width: 45%;
+                aspect-ratio: 0.7;
+                background-color: white;
+                margin: 10px auto;
+                border-radius: 20px;
+                text-align: center;
+
+                img {
+                    width: 100%;
+                    border-radius: 20px 20px 0 0;
+                }
+
+                h4 {
+                    margin: 5px auto;
+                    font-size: 100%;
+                }
+
+                p {
+                    margin: 10px;
+                }
+
+                button {
+                    border: none;
+                    background-color: green;
+                    border-radius: 10px;
+                    font-size: 20px;
+                    color: white;
+                    padding: 7px 13px;
+                }
+            }
+        }
+    }
